2004-05-10  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-filter-gzip.c: New filter for compressing/inflating
	gzip streams.

2004-05-09  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-message.c (write_received): Be careful to never
	append bytes beyond the end of the header value (eg the nul byte).

	* gmime/gmime-utils.c (g_mime_utils_header_fold): Don't allow
	folded headers to end with \n\n.

2004-04-28  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-multipart-encrypted.c
	(g_mime_multipart_encrypted_decrypt): Reset the stream before
	trying to parse it.

2004-04-25  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-utils.c (g_mime_utils_header_fold): Rather than
	always using a tab character when folding, use the lwsp character
	that we are wrapping at instead.

2004-04-24  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-parser.c (g_mime_parser_init): Initialise
	respect_content_length.

2004-04-24  Jeffrey Stedfast  <fejj@ximian.com>

	* README: Updated

	* configure.in: Bumped version to 2.1.4

	* gmime/gmime-part.c (g_mime_part_get_content): Disable debug
	warning.

	* gmime/gmime-iconv.c: Same.

	* gmime/gmime-iconv-utils.c: Disable warnings.

	* gmime/gmime-utils.c (decode_msgid): Try to always return a
	string buffer containing whatever we can get from the msg-id, even
	if it isn't a valid msg-id token.

2004-04-19  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-content-type.c
	(g_mime_content_type_new_from_string): Chew up lwsp between the
	end of the subtype and the ';' token, if there is any.

2004-04-13  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-gpg-context.c (gpg_ctx_parse_status): Save both the
	TRUST_UNDEFINED trust state as well as the whether or not we get a
	NO_PUBKEY status message.

2004-04-11  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-stream-filter.c (stream_read): Check that we haven't
	already flushed the stream if the source stream is at EOS - fixes