@@ -1,3 +1,7 @@
+2004-05-13  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* gmime/gmime-message.c (write_received): Rewritten.
+
 2004-05-10  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* gmime/gmime-filter-gzip.c: New filter for compressing/inflating
